[package]
name = "ff_derive_ce"
version = "0.11.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>",    
    "Alex Gluchowski <alex@gluchowski.net>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>"]
description = "Procedural macro library used to build custom prime field implementations"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/matter-labs/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/matter-labs/ff"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = "1"
serde = {version = "1", features = ["derive"]}

[features]
default = []
asm = []